--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,13 @@
     color: white;
     font-size: 12pt;
 }
+h3.title {
+    padding-top: 30px;
+    padding-bottom: 20px;
+}
+.address {
+    width: 100%;
+}
 .gallery img {
     width: 100%;
     padding: 5px;
@@ -36,6 +43,7 @@
 .footer{
     background-color: #272882;
     padding: 20px;
+    margin-top: 20px;
 }
 .footer h4, .footer a {
     color: white;
